--- a/client/src/ui/dialogs/join_other_system_dialog.ui
+++ b/client/src/ui/dialogs/join_other_system_dialog.ui
@@ -6,15 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>308</width>
-    <height>92</height>
+    <width>304</width>
+    <height>112</height>
    </rect>
+  </property>
+  <property name="windowTitle">
+   <string>Join the Other System</string>
   </property>
   <layout class="QFormLayout" name="formLayout">
    <property name="sizeConstraint">
     <enum>QLayout::SetFixedSize</enum>
    </property>
-   <item row="2" column="0" colspan="2">
+   <item row="3" column="0" colspan="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -55,6 +58,13 @@
      </property>
      <property name="editable">
       <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0" colspan="2">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string/>
      </property>
     </widget>
    </item>
