fix width of the combo bo in the join other system dialog
<==== Mercurial data ====>
Branch: network_issues

--- a/client/src/ui/dialogs/join_other_system_dialog.ui
+++ b/client/src/ui/dialogs/join_other_system_dialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>304</width>
+    <width>302</width>
     <height>112</height>
    </rect>
   </property>
@@ -51,7 +51,7 @@
    <item row="0" column="1">
     <widget class="QComboBox" name="urlComboBox">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
