--- a/wixsetup/maven/filter-resources/Product-full.wxs
+++ b/wixsetup/maven/filter-resources/Product-full.wxs
@@ -144,11 +144,17 @@
         <!-- Assign default values for Quick installation -->
         <CustomAction Id="AssignClientPort" Property="CLIENT_PORT" Value="[SERVER_PORT]"/>
 
+        <CustomAction Id="CloseTrayToolAction_Cmd" Property="CloseTrayToolAction"
+                      Value="&quot;[${customization}TrayToolDir]traytool.exe&quot; &quot;quit&quot;" Execute="immediate" />
+        <CustomAction Id="CloseTrayToolAction" BinaryKey="WixCA" DllEntry="CAQuietExec"
+                      Execute="deferred" Return="ignore" Impersonate="no" />
+
         <CustomAction Id="CloseAppLauncherAction_Cmd" Property="CloseAppLauncherAction"
                       Value="&quot;[${customization}_${parsedVersion.majorVersion}_${parsedVersion.minorVersion}_Dir]$(var.ProductName) Launcher.exe&quot; &quot;quit&quot;" Execute="immediate" />
         <CustomAction Id="CloseAppLauncherAction" BinaryKey="WixCA" DllEntry="CAQuietExec"
                       Execute="deferred" Return="ignore" Impersonate="no" />
 
+        <CustomAction Id="LaunchTrayTool" Execute="immediate" Impersonate="yes" Return="asyncNoWait" FileKey="traytool.exe" ExeCommand=""/>
         <CustomAction Id="LaunchClient" Execute="immediate" Impersonate="yes" Return="asyncNoWait" FileKey="applauncher.exe" ExeCommand=""/>
 
         <CustomAction Id="NoDowngrade" Error="NoDowngrade" /> 
@@ -184,12 +190,22 @@
             <Custom Action="DeleteOldMediaserverSettings_Cmd" After="WriteRegistryValues">1</Custom>
             <Custom Action="DeleteOldMediaserverSettings" After="DeleteOldMediaserverSettings_Cmd">1</Custom>
 
+            <Custom Action="CloseTrayToolAction_Cmd" Before="CloseTrayToolAction">
+                <![CDATA[ NOT $(var.VmsInstalling) ]]>
+            </Custom>
+            <Custom Action="CloseTrayToolAction" Before="StopServices">
+                <![CDATA[ NOT $(var.VmsInstalling) ]]>
+            </Custom>
+
             <Custom Action="CloseAppLauncherAction_Cmd" Before="CloseAppLauncherAction">
                 <![CDATA[ NOT $(var.VmsInstalling) ]]>
             </Custom>
             <Custom Action="CloseAppLauncherAction" Before="StopServices">
                 <![CDATA[ NOT $(var.VmsInstalling) ]]>
             </Custom>
+
+            <Custom Action="LaunchTrayTool" After="InstallFinalize">
+                <![CDATA[ (!AppServerFeature=3 OR INSTALL_ECS OR !ServerFeature=3 OR INSTALL_SERVER) AND REMOVE <> "ALL" ]]></Custom>
         </InstallExecuteSequence>
 
         <Media Id="1" Cabinet="media1.cab" EmbedCab="yes" />
