QnProgressWidget separated from QnButtonBoxDialog
<==== Mercurial data ====>
Branch: general_system_settings

--- a/client/src/ui/dialogs/system_administration_dialog.ui
+++ b/client/src/ui/dialogs/system_administration_dialog.ui
@@ -15,7 +15,14 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QTabWidget" name="tabWidget"/>
+    <widget class="QTabWidget" name="tabWidget">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
