--- a/client/src/ui/dialogs/system_administration_dialog.ui
+++ b/client/src/ui/dialogs/system_administration_dialog.ui
@@ -2,6 +2,14 @@
 <ui version="4.0">
  <class>QnSystemAdministrationDialog</class>
  <widget class="QDialog" name="QnSystemAdministrationDialog">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>547</width>
+    <height>745</height>
+   </rect>
+  </property>
   <property name="windowTitle">
    <string>System Administration</string>
   </property>
