(Issue #3557) :  Professional licenses can be used on edge
<==== Mercurial data ====>
Branch: roma_pack2

--- a/client/src/ui/widgets/properties/single_camera_settings_widget.ui
+++ b/client/src/ui/widgets/properties/single_camera_settings_widget.ui
@@ -335,6 +335,13 @@
             </property>
            </widget>
           </item>
+          <item>
+           <widget class="QLabel" name="edgeLicensesLabel">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
