--- a/client/src/ui/widgets/properties/camera_schedule_widget.ui
+++ b/client/src/ui/widgets/properties/camera_schedule_widget.ui
@@ -76,6 +76,13 @@
     </widget>
    </item>
    <item>
+    <widget class="QLabel" name="edgeLicensesLabel">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QGroupBox" name="scheduleGridGroupBox">
      <property name="title">
       <string>Schedule Grid</string>
