--- a/client/src/ui/widgets/settings/license_manager_widget.ui
+++ b/client/src/ui/widgets/settings/license_manager_widget.ui
@@ -10,7 +10,7 @@
     <height>372</height>
    </rect>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_5">
+  <layout class="QVBoxLayout" name="verticalLayout_5" stretch="0,0,1">
    <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
@@ -65,6 +65,19 @@
       </item>
      </layout>
     </widget>
+   </item>
+   <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
