--- a/client/src/ui/widgets/settings/license_widget.ui
+++ b/client/src/ui/widgets/settings/license_widget.ui
@@ -7,10 +7,10 @@
     <x>0</x>
     <y>0</y>
     <width>409</width>
-    <height>287</height>
+    <height>306</height>
    </rect>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
+  <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,0,1,0">
    <item>
     <widget class="QComboBox" name="activationTypeComboBox">
      <property name="currentIndex">
@@ -29,29 +29,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QTextEdit" name="manualActivationTextEdit">
-     <property name="frameShape">
-      <enum>QFrame::NoFrame</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Plain</enum>
-     </property>
-     <property name="lineWidth">
-      <number>0</number>
-     </property>
-     <property name="verticalScrollBarPolicy">
-      <enum>Qt::ScrollBarAlwaysOff</enum>
-     </property>
-     <property name="horizontalScrollBarPolicy">
-      <enum>Qt::ScrollBarAlwaysOff</enum>
-     </property>
-     <property name="readOnly">
-      <bool>true</bool>
-     </property>
-     <property name="textInteractionFlags">
-      <set>Qt::LinksAccessibleByMouse</set>
-     </property>
-    </widget>
+    <widget class="QnWordWrappedLabel" name="manualActivationTextWidget" native="true"/>
    </item>
    <item>
     <layout class="QFormLayout" name="formLayout_2">
@@ -177,6 +155,14 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QnWordWrappedLabel</class>
+   <extends>QWidget</extends>
+   <header location="global">ui/widgets/word_wrapped_label.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
  <slots>
