(Issue #3615) :  "Restore Defaults" doesn't work for "RTP Transport" if selected more than 1 camera
(Issue #3614) :  Remove "Don't change" from drop-down list for 1 selected camera

<==== Mercurial data ====>
Branch: master

--- a/client/src/ui/widgets/properties/expert_settings_widget.ui
+++ b/client/src/ui/widgets/properties/expert_settings_widget.ui
@@ -249,11 +249,6 @@
           <widget class="QComboBox" name="comboBoxTransport">
            <item>
             <property name="text">
-             <string>Don't change</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
              <string>Auto</string>
             </property>
            </item>
@@ -357,6 +352,7 @@
   </layout>
  </widget>
  <resources>
+  <include location="../../../../x64/build/client.qrc"/>
   <include location="../../../../x64/build/client.qrc"/>
   <include location="../../../../x64/build/client.qrc"/>
   <include location="../../../../x64/build/client.qrc"/>
