--- a/client/src/ui/widgets/settings/smtp_settings_widget.ui
+++ b/client/src/ui/widgets/settings/smtp_settings_widget.ui
@@ -96,7 +96,7 @@
           <item row="0" column="0">
            <widget class="QLabel" name="simpleEmailLabel">
             <property name="text">
-             <string>&amp;E-Mail:</string>
+             <string>&amp;Email:</string>
             </property>
             <property name="buddy">
              <cstring>simpleEmailLineEdit</cstring>
@@ -158,16 +158,6 @@
            </widget>
           </item>
          </layout>
-         <zorder>simpleEmailLabel</zorder>
-         <zorder>simpleEmailLineEdit</zorder>
-         <zorder>simplePasswordLabel</zorder>
-         <zorder>simplePasswordLineEdit</zorder>
-         <zorder>simpleSignatureLabel</zorder>
-         <zorder>simpleSignatureLineEdit</zorder>
-         <zorder>simpleSupportEmailLabel</zorder>
-         <zorder>simpleSupportEmailLineEdit</zorder>
-         <zorder>detectErrorLabel</zorder>
-         <zorder>groupBox</zorder>
         </widget>
         <widget class="QWidget" name="advancedPage">
          <layout class="QVBoxLayout" name="verticalLayout">
@@ -542,8 +532,6 @@
        </spacer>
       </item>
      </layout>
-     <zorder>controlsWidget</zorder>
-     <zorder>stackedWidget</zorder>
     </widget>
    </item>
    <item>
