--- a/client/src/ui/dialogs/preferences_dialog.ui
+++ b/client/src/ui/dialogs/preferences_dialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>System Settings</string>
+   <string>Local Settings</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout" stretch="1,0,0">
    <item>
