--- a/client/src/ui/dialogs/server_settings_dialog.ui
+++ b/client/src/ui/dialogs/server_settings_dialog.ui
@@ -147,7 +147,7 @@
          <number>0</number>
         </property>
         <property name="columnCount">
-         <number>4</number>
+         <number>6</number>
         </property>
         <attribute name="horizontalHeaderVisible">
          <bool>true</bool>
@@ -181,7 +181,17 @@
         </column>
         <column>
          <property name="text">
-          <string>Video Storage</string>
+          <string>Login</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Password</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Space</string>
          </property>
         </column>
        </widget>
