--- a/client/src/ui/widgets/properties/camera_schedule_widget.ui
+++ b/client/src/ui/widgets/properties/camera_schedule_widget.ui
@@ -19,7 +19,7 @@
   <property name="windowTitle">
    <string>Camera Schedule Editor</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_6" stretch="0,0,0,1,0">
+  <layout class="QVBoxLayout" name="verticalLayout_6" stretch="0,0,1,0">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
@@ -62,23 +62,9 @@
     </layout>
    </item>
    <item>
-    <widget class="QLabel" name="digitalLicensesLabel">
+    <widget class="QLabel" name="licensesLabel">
      <property name="text">
       <string notr="true">&lt;X license(s) are used out of Y&gt;</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QLabel" name="analogLicensesLabel">
-     <property name="text">
-      <string notr="true">&lt;X analog license(s) are used out of Y&gt;</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QLabel" name="edgeLicensesLabel">
-     <property name="text">
-      <string/>
      </property>
     </widget>
    </item>
