(Issue #3666) :  "Do not archive primary stream" option
<==== Mercurial data ====>
Branch: roma_pack2

--- a/client/src/ui/widgets/properties/expert_settings_widget.ui
+++ b/client/src/ui/widgets/properties/expert_settings_widget.ui
@@ -223,6 +223,13 @@
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
+          <widget class="QCheckBox" name="checkBoxPrimaryRecorder">
+           <property name="text">
+            <string>Do not archive primary stream</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QCheckBox" name="checkBoxSecondaryRecorder">
            <property name="text">
             <string>Do not archive secondary stream</string>
@@ -352,6 +359,7 @@
   </layout>
  </widget>
  <resources>
+  <include location="../../../../x64/build/client.qrc"/>
   <include location="../../../../x64/build/client.qrc"/>
   <include location="../../../../x64/build/client.qrc"/>
   <include location="../../../../x64/build/client.qrc"/>
